<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/gradient"
    tools:context=".view.register.RegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvLoginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etBankId"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/bankId"
                        android:imeOptions="actionNext"
                        android:inputType="number"
                        android:lines="1"
                        android:paddingBottom="8dp"
                        android:visibility="gone" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingBottom="8dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingBottom="8dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordConfirm"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/password_confirm"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingBottom="8dp" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddress"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@null"
                        android:gravity="center"
                        android:hint="@string/address"
                        android:imeOptions="actionNext"
                        android:inputType="textCapWords"
                        android:lines="1"
                        android:paddingBottom="8dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">



                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCity"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="0.7"
                            android:layout_marginTop="8dp"
                            android:background="@null"
                            android:gravity="center"
                            android:hint="@string/city"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:lines="1"
                            android:paddingBottom="0dp" />

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etZip"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="0.3"
                            android:layout_marginTop="8dp"
                            android:background="@null"
                            android:gravity="center"
                            android:hint="@string/zip_code"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:lines="1"
                            android:paddingBottom="0dp" />

                    </LinearLayout>



                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@+id/cvLoginForm"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/next"
                app:backgroundTint="@color/colorDead"
                app:cornerRadius="8dp" />

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>
